...
            legacy: [
                "com.kfpun.nihongo.premium.3m",
                "com.kfpun.nihongo.premium.6m",
                "com.kfpun.nihongo.premium.12m",
            ]),
        sampleWords: [
            .init(kana: "わたし", kanji: "私", romaji: "watashi", meaning: "I"),
            .init(kana: "せんせい", kanji: "先生", romaji: "sensei", meaning: "teacher"),
            .init(kana: "がくせい", kanji: "学生", romaji: "gakusei", meaning: "student"),
            .init(kana: "ほん", kanji: "本", romaji: "hon", meaning: "book"),
            .init(kana: "とけい", kanji: "時計", romaji: "tokei", meaning: "watch, clock"),
            .init(kana: "でんわ", kanji: "電話", romaji: "denwa", meaning: "telephone"),
            .init(kana: "くるま", kanji: "車", romaji: "kuruma", meaning: "car"),
...
